[package]
name = "witx-lucet-bindings-gen"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
keywords = ["lucet", "wasi", "witx", "wasm"]
repository = "https://github.com/jedisct1/rust-witx-lucet-bindings"
homepage = "https://github.com/jedisct1/rust-witx-lucet-bindings"
categories = ["wasm"]
license = "ISC"
description = "Generate .JSON files for Lucet from WITX files"

[dependencies]
clap = { version = "2", features = ["wrap_help"] }
json = "0.12"
witx = "0.8"